#ifndef IEXPORTSTRATEGY_H
#define IEXPORTSTRATEGY_H

#include <QString>
#include <vector>
#include "linkmanager.h"

/**
 * @brief Базовий інтерфейс для всіх стратегій експорту посилань.
 * * Цей абстрактний клас є основою патерну "Стратегія" (Strategy). Він визначає
 * загальний контракт (інтерфейс) для різноманітних алгоритмів експорту (наприклад, у CSV або HTML).
 * Завдяки цьому інтерфейсу головний код може викликати експорт, не знаючи конкретної реалізації.
 */
class IExportStrategy {
public:
    /**
     * @brief Віртуальний деструктор за замовчуванням.
     * Забезпечує безпечне та правильне видалення об'єктів похідних класів
     * через вказівник на базовий інтерфейс.
     */
    virtual ~IExportStrategy() = default;

    /**
     * @brief Суто віртуальний метод для експорту даних.
     * Усі похідні класи-стратегії повинні реалізувати цей метод, щоб надати
     * власну логіку збереження посилань у певний формат.
     * * @param filePath Шлях до файлу, у який будуть збережені експортовані дані.
     * @param links Вектор об'єктів LinkData, які потрібно зберегти.
     * @return true, якщо експорт завершився успішно, інакше false.
     */
    virtual bool exportData(const QString& filePath, const std::vector<LinkData>& links) const = 0;
};

#endif // IEXPORTSTRATEGY_H
